Added beginnings of the tickerlingua language interface.

--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="var" path="JAVAMAIL_HOME/mail.jar"/>
 	<classpathentry kind="var" path="HACKYSTAT_DAILYPROJECTDATA_HOME/dailyprojectdata.jar"/>
 	<classpathentry kind="var" path="TWITTER4J_HOME/twitter4j-1.1.0.jar"/>
+	<classpathentry kind="var" path="HACKYSTAT_TELEMETRY_HOME/telemetry.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
