--- a/build.xml
+++ b/build.xml
@@ -48,6 +48,10 @@
   <available file="${env.HACKYSTAT_SENSORBASE_HOME}/sensorbase.lib.jar" type="file" property="hackystat.sensorbase.available" />
   <fail message="${env.HACKYSTAT_SENSORBASE_HOME}/sensorbase.lib.jar. This package requires the Hackystat SensorBase to be installed and HACKYSTAT_SENSORBASE_HOME defined" unless="hackystat.sensorbase.available" />
 
+  <!-- Make sure that Hackystat Telemetry library is available . -->
+  <available file="${env.HACKYSTAT_TELEMETRY_HOME}/telemetry.jar" type="file" property="hackystat.telemetry.available" />
+  <fail message="${env.HACKYSTAT_TELEMETRY_HOME}/telemetry.jar. This package requires the Hackystat Telemetry to be installed and HACKYSTAT_TELEMETRY_HOME defined" unless="hackystat.telemetry.available" />
+
   <!-- Make sure that Twitter4J library is available . -->
    <available file="${env.TWITTER4J_HOME}/twitter4j-1.1.0.jar" type="file" property="twitter4j.available" />
    <fail message="${env.TWITTER4J_HOME}/twitter4j-1.1.0.jar. This package requires Twitter4J to be installed and TWITTER4J_HOME defined" unless="twitter4j.available" />
