--- a/build.xml
+++ b/build.xml
@@ -84,6 +84,7 @@
     <!-- Get Utilities, Restlet, Derby, etc. by including full sensorbase.jar. -->
     <fileset file="${env.HACKYSTAT_SENSORBASE_HOME}/sensorbase.jar" />
     <fileset file="${env.HACKYSTAT_DAILYPROJECTDATA_HOME}/dailyprojectdata.lib.jar" />
+    <fileset file="${env.HACKYSTAT_TELEMETRY_HOME}/telemetry.jar" />
     <fileset file="${env.JUNIT_HOME}/junit-${junit.version}.jar" />
     <fileset file="${env.FINDBUGS_HOME}/lib/annotations.jar" />
     <fileset file="${env.TWITTER4J_HOME}/twitter4j-1.1.0.jar" />
