--- a/.classpath
+++ b/.classpath
@@ -3,10 +3,9 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="var" path="HACKYSTAT_SENSORBASE_HOME/sensorbase.jar"/>
-	<classpathentry kind="var" path="JAVAMAIL_HOME/mail.jar"/>
-	<classpathentry kind="var" path="HACKYSTAT_DAILYPROJECTDATA_HOME/dailyprojectdata.jar"/>
-	<classpathentry kind="var" path="TWITTER4J_HOME/twitter4j-1.1.0.jar"/>
-	<classpathentry kind="var" path="HACKYSTAT_TELEMETRY_HOME/telemetry.jar"/>
+	<classpathentry kind="lib" path="lib/hackystat-analysis-dailyprojectdata/dailyprojectdata.lib.jar"/>
+	<classpathentry kind="lib" path="lib/hackystat-analysis-telemetry/telemetry.lib.jar"/>
+	<classpathentry kind="lib" path="lib/hackystat-sensorbase-uh/sensorbaseclient.jar"/>
+	<classpathentry kind="lib" path="lib/twitter4j/twitter4j.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
