--- a/build.xml
+++ b/build.xml
@@ -1,10 +1,12 @@
-<project name="build" default="compile">
+<project name="build" default="compile" xmlns:ivy="antlib:org.apache.ivy.ant">
   <description>
   The basic build file for the DailyProjectData system. 
   </description>
 
-  <!-- Always make environment variables available with the "env." prefix. -->
-  <property environment="env" />
+  <!-- Basic directory structure. -->
+  <property name="src.dir" location="${basedir}/src" />
+  <property name="lib.dir" location="${basedir}/lib" />
+  <property name="build.dir" location="${basedir}/build" />
 
   <!-- Make sure we're running a Java 5 or better. -->
   <condition property="java.5.available">
@@ -21,41 +23,40 @@
   </condition>
   <fail message="This package requires Ant 1.7." unless="ant.1.7.available" />
 
-  <!-- Make sure that a compatible version of JUnit is installed. -->
-  <!-- You can override the version. For example: 'ant -Djunit.version=4.1 -f junit.build.xml' -->
-  <property name="junit.version" value="4.5" />
-  <property name="junit.jar" location="${env.JUNIT_HOME}/junit-${junit.version}.jar" />
-  <available file="${junit.jar}" type="file" property="junit.available" />
-  <fail message="Missing ${junit.jar}. This package requires JUNIT_HOME to be defined and ${junit.jar} available" unless="junit.available" />
+  <!-- Make sure Ivy is installed. -->
+  <import file="ivy.build.xml"/>
+  <available file="${ivy.jar.path}/ivy.jar" type="file" property="ivy.available" />
+  <fail message="This package requires Ivy.  To install, invoke 'ant -f ivy.build.xml'." unless="ivy.available" />
+  <taskdef resource="org/apache/ivy/ant/antlib.xml" uri="antlib:org.apache.ivy.ant" classpath="${ivy.jar.path}/ivy.jar"/>
 
-  <!-- Make sure that Restlet is installed . -->
-  <available file="${env.RESTLET_HOME}/lib/org.restlet.jar" type="file" property="restlet.available" />
-  <fail message="Missing ${env.RESTLET_HOME}/lib/org.restlet.jar. This package requires the Restlet Framework to be downloaded and RESTLET_HOME defined" unless="restlet.available" />
+  <!-- Make sure library.versions.properties is installed, which provides all library version numbers. -->
+  <property name="library.versions.path" location="${user.home}/.hackystat/library.versions.properties" />
+  <available file="${library.versions.path}" type="file" property="library.versions.available" />
+  <fail message="This package requires ~/.hackystat/library.versions.properties.  To install, invoke 'ant -f ivy.build.xml'." unless="library.versions.available" />
+  <!-- Now load all library version numbers. -->
+  <property file="${library.versions.path}" />
 
-  <!-- Make sure that the JAXB library is available (by default in Java 6, through manual installation in Java 5. -->
-  <available classname="javax.xml.bind.JAXBContext" property="jaxb.available" />
-  <fail message="This package requires JAXB to be installed" unless="jaxb.available" />
+  <!-- Where to look for configuration files (Checkstyle, PMD, FindBugs, etc.) -->
+  <property name="configfiles.url" value="http://hackystat.googlecode.com/svn/trunk/configfiles/" />
+  <property name="configfiles.dir" location="${lib.dir}/configfiles" />
+  <mkdir dir="${configfiles.dir}" />
 
-  <!-- Make sure that Hackystat Utilities are is available . -->
-  <available file="${env.HACKYSTAT_UTILITIES_HOME}/stacktrace.lib.jar" type="file" property="hackystat.utilities.available" />
-  <fail message="Missing ${env.HACKYSTAT_UTILITIES_HOME}/stacktrace.lib.jar. This package requires the Hackystat Utilities to be installed and HACKYSTAT_UTILITIES_HOME defined" unless="hackystat.utilities.available" />
+  <!-- Install libraries required for compilation. -->
+  <ivy:retrieve organisation="org.junit" module="junit" revision="${junit.version}" pattern="${lib.dir}/junit/[artifact].[ext]" sync="true" inline="true" conf="default" log="download-only" transitive="false" type="jar" />
+  <path id="junit.path" location="${lib.dir}/junit/junit.jar" />
 
-  <!-- Make sure that Hackystat DailyProjectData library is available . -->
-  <available file="${env.HACKYSTAT_DAILYPROJECTDATA_HOME}/dailyprojectdata.lib.jar" type="file" property="hackystat.dailyprojectdata.available" />
-  <fail message="Missing ${env.HACKYSTAT_DAILYPROJECTDATA_HOME}/dailyprojectdata.lib.jar. This package requires the DailyProjectData service to be installed and HACKYSTAT_DAILYPROJECTDATA_HOME defined" unless="hackystat.dailyprojectdata.available" />
+  <ivy:retrieve organisation="org.hackystat" module="hackystat-sensorbase-uh" revision="latest.integration" pattern="${lib.dir}/hackystat-sensorbase-uh/[artifact].[ext]" sync="true" inline="true" conf="default" log="download-only" transitive="false" type="jar" />
+  <path id="hackystat-sensorbase-uh.path" location="${lib.dir}/hackystat-sensorbase-uh/sensorbaseclient.jar" />
 
-  <!-- Make sure that Hackystat SensorBase library is available . -->
-  <available file="${env.HACKYSTAT_SENSORBASE_HOME}/sensorbase.lib.jar" type="file" property="hackystat.sensorbase.available" />
-  <fail message="${env.HACKYSTAT_SENSORBASE_HOME}/sensorbase.lib.jar. This package requires the Hackystat SensorBase to be installed and HACKYSTAT_SENSORBASE_HOME defined" unless="hackystat.sensorbase.available" />
+  <ivy:retrieve organisation="org.hackystat" module="hackystat-analysis-dailyprojectdata" revision="latest.integration" pattern="${lib.dir}/hackystat-analysis-dailyprojectdata/[artifact].[ext]" sync="true" inline="true" conf="default" log="download-only" transitive="false" type="jar" />
+  <path id="hackystat-analysis-dailyprojectdata.path" location="${lib.dir}/hackystat-analysis-dailyprojectdata/dailyprojectdata.lib.jar" />
 
-  <!-- Make sure that Hackystat Telemetry library is available . -->
-  <available file="${env.HACKYSTAT_TELEMETRY_HOME}/telemetry.jar" type="file" property="hackystat.telemetry.available" />
-  <fail message="${env.HACKYSTAT_TELEMETRY_HOME}/telemetry.jar. This package requires the Hackystat Telemetry to be installed and HACKYSTAT_TELEMETRY_HOME defined" unless="hackystat.telemetry.available" />
+  <ivy:retrieve organisation="org.hackystat" module="hackystat-analysis-telemetry" revision="latest.integration" pattern="${lib.dir}/hackystat-analysis-telemetry/[artifact].[ext]" sync="true" inline="true" conf="default" log="download-only" transitive="false" type="jar" />
+  <path id="hackystat-analysis-telemetry.path" location="${lib.dir}/hackystat-analysis-telemetry/telemetry.jar" />
 
-  <!-- Make sure that Twitter4J library is available . -->
-   <available file="${env.TWITTER4J_HOME}/twitter4j-1.1.0.jar" type="file" property="twitter4j.available" />
-   <fail message="${env.TWITTER4J_HOME}/twitter4j-1.1.0.jar. This package requires Twitter4J to be installed and TWITTER4J_HOME defined" unless="twitter4j.available" />
-
+  <ivy:retrieve organisation="twitter4j" module="twitter4j" revision="2.0.8" pattern="${lib.dir}/twitter4j/[artifact].[ext]" sync="true" inline="true" conf="default" log="download-only" transitive="false" type="jar" />
+  <path id="twitter4j.path" location="${lib.dir}/twitter4j/twitter4j.jar" />
+  
   <!-- Basic properties for this system. -->
   <property name="system.name" value="hackystat-ui-tickertape" />
   <property name="majorVersionNumber" value="8" />
@@ -74,20 +75,13 @@
     <istrue value="${hackystat.enable}" />
   </condition>
 
-  <!-- Basic directory structure. -->
-  <property name="src.dir" location="${basedir}/src" />
-  <property name="lib.dir" location="${basedir}/lib" />
-  <property name="build.dir" location="${basedir}/build" />
-
   <!-- The compile classpath is useful to many tools. -->
   <path id="compile.classpath">
-    <!-- Get Utilities, Restlet, Derby, etc. by including full sensorbase.jar. -->
-    <fileset file="${env.HACKYSTAT_SENSORBASE_HOME}/sensorbase.jar" />
-    <fileset file="${env.HACKYSTAT_DAILYPROJECTDATA_HOME}/dailyprojectdata.lib.jar" />
-    <fileset file="${env.HACKYSTAT_TELEMETRY_HOME}/telemetry.jar" />
-    <fileset file="${env.JUNIT_HOME}/junit-${junit.version}.jar" />
-    <fileset file="${env.FINDBUGS_HOME}/lib/annotations.jar" />
-    <fileset file="${env.TWITTER4J_HOME}/twitter4j-1.1.0.jar" />
+    <path refid="junit.path" />
+    <path refid="hackystat-sensorbase-uh.path" />
+    <path refid="hackystat-analysis-dailyprojectdata.path" />  
+    <path refid="hackystat-analysis-telemetry.path" />  
+    <path refid="twitter4j.path" />  
   </path>
 
   <target name="compile" description="Compiles the code.">
