--- a/build.xml
+++ b/build.xml
@@ -24,10 +24,10 @@
   <fail message="This package requires Ant 1.7." unless="ant.1.7.available" />
 
   <!-- Make sure Ivy is installed. -->
-  <import file="ivy.build.xml"/>
+  <import file="ivy.build.xml" />
   <available file="${ivy.jar.path}/ivy.jar" type="file" property="ivy.available" />
   <fail message="This package requires Ivy.  To install, invoke 'ant -f ivy.build.xml'." unless="ivy.available" />
-  <taskdef resource="org/apache/ivy/ant/antlib.xml" uri="antlib:org.apache.ivy.ant" classpath="${ivy.jar.path}/ivy.jar"/>
+  <taskdef resource="org/apache/ivy/ant/antlib.xml" uri="antlib:org.apache.ivy.ant" classpath="${ivy.jar.path}/ivy.jar" />
 
   <!-- Make sure library.versions.properties is installed, which provides all library version numbers. -->
   <property name="library.versions.path" location="${user.home}/.hackystat/library.versions.properties" />
@@ -41,22 +41,23 @@
   <property name="configfiles.dir" location="${lib.dir}/configfiles" />
   <mkdir dir="${configfiles.dir}" />
 
-  <!-- Install libraries required for compilation. -->
-  <ivy:retrieve organisation="org.junit" module="junit" revision="${junit.version}" pattern="${lib.dir}/junit/[artifact].[ext]" sync="true" inline="true" conf="default" log="download-only" transitive="false" type="jar" />
-  <path id="junit.path" location="${lib.dir}/junit/junit.jar" />
+  <target name="install-libraries" description="Install libraries needed for compilation">
+    <ivy:retrieve organisation="org.junit" module="junit" revision="${junit.version}" pattern="${lib.dir}/junit/[artifact].[ext]" sync="true" inline="true" conf="default" log="download-only" transitive="false" type="jar" />
+    <path id="junit.path" location="${lib.dir}/junit/junit.jar" />
 
-  <ivy:retrieve organisation="org.hackystat" module="hackystat-sensorbase-uh" revision="latest.integration" pattern="${lib.dir}/hackystat-sensorbase-uh/[artifact].[ext]" sync="true" inline="true" conf="default" log="download-only" transitive="false" type="jar" />
-  <path id="hackystat-sensorbase-uh.path" location="${lib.dir}/hackystat-sensorbase-uh/sensorbaseclient.jar" />
+    <ivy:retrieve organisation="org.hackystat" module="hackystat-sensorbase-uh" revision="latest.integration" pattern="${lib.dir}/hackystat-sensorbase-uh/[artifact].[ext]" sync="true" inline="true" conf="default" log="download-only" transitive="false" type="jar" />
+    <path id="hackystat-sensorbase-uh.path" location="${lib.dir}/hackystat-sensorbase-uh/sensorbaseclient.jar" />
 
-  <ivy:retrieve organisation="org.hackystat" module="hackystat-analysis-dailyprojectdata" revision="latest.integration" pattern="${lib.dir}/hackystat-analysis-dailyprojectdata/[artifact].[ext]" sync="true" inline="true" conf="default" log="download-only" transitive="false" type="jar" />
-  <path id="hackystat-analysis-dailyprojectdata.path" location="${lib.dir}/hackystat-analysis-dailyprojectdata/dailyprojectdata.lib.jar" />
+    <ivy:retrieve organisation="org.hackystat" module="hackystat-analysis-dailyprojectdata" revision="latest.integration" pattern="${lib.dir}/hackystat-analysis-dailyprojectdata/[artifact].[ext]" sync="true" inline="true" conf="default" log="download-only" transitive="false" type="jar" />
+    <path id="hackystat-analysis-dailyprojectdata.path" location="${lib.dir}/hackystat-analysis-dailyprojectdata/dailyprojectdata.lib.jar" />
 
-  <ivy:retrieve organisation="org.hackystat" module="hackystat-analysis-telemetry" revision="latest.integration" pattern="${lib.dir}/hackystat-analysis-telemetry/[artifact].[ext]" sync="true" inline="true" conf="default" log="download-only" transitive="false" type="jar" />
-  <path id="hackystat-analysis-telemetry.path" location="${lib.dir}/hackystat-analysis-telemetry/telemetry.jar" />
+    <ivy:retrieve organisation="org.hackystat" module="hackystat-analysis-telemetry" revision="latest.integration" pattern="${lib.dir}/hackystat-analysis-telemetry/[artifact].[ext]" sync="true" inline="true" conf="default" log="download-only" transitive="false" type="jar" />
+    <path id="hackystat-analysis-telemetry.path" location="${lib.dir}/hackystat-analysis-telemetry/telemetry.jar" />
 
-  <ivy:retrieve organisation="twitter4j" module="twitter4j" revision="2.0.8" pattern="${lib.dir}/twitter4j/[artifact].[ext]" sync="true" inline="true" conf="default" log="download-only" transitive="false" type="jar" />
-  <path id="twitter4j.path" location="${lib.dir}/twitter4j/twitter4j.jar" />
-  
+    <ivy:retrieve organisation="twitter4j" module="twitter4j" revision="2.0.8" pattern="${lib.dir}/twitter4j/[artifact].[ext]" sync="true" inline="true" conf="default" log="download-only" transitive="false" type="jar" />
+    <path id="twitter4j.path" location="${lib.dir}/twitter4j/twitter4j.jar" />
+  </target>
+
   <!-- Basic properties for this system. -->
   <property name="system.name" value="hackystat-ui-tickertape" />
   <property name="majorVersionNumber" value="8" />
@@ -79,12 +80,12 @@
   <path id="compile.classpath">
     <path refid="junit.path" />
     <path refid="hackystat-sensorbase-uh.path" />
-    <path refid="hackystat-analysis-dailyprojectdata.path" />  
-    <path refid="hackystat-analysis-telemetry.path" />  
-    <path refid="twitter4j.path" />  
+    <path refid="hackystat-analysis-dailyprojectdata.path" />
+    <path refid="hackystat-analysis-telemetry.path" />
+    <path refid="twitter4j.path" />
   </path>
 
-  <target name="compile" description="Compiles the code.">
+  <target name="compile" depends="install-libraries" description="Compiles the code.">
     <!-- Now compile the code into build/classes -->
     <mkdir dir="${build.dir}/classes" />
     <javac srcdir="${src.dir}" destdir="${build.dir}/classes" source="1.5" target="1.5" debug="on" includeAntRuntime="no">
