--- a/.classpath
+++ b/.classpath
@@ -3,9 +3,21 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="lib/hackystat-analysis-dailyprojectdata/dailyprojectdata.lib.jar"/>
-	<classpathentry kind="lib" path="lib/hackystat-analysis-telemetry/telemetry.lib.jar"/>
-	<classpathentry kind="lib" path="lib/hackystat-sensorbase-uh/sensorbaseclient.jar"/>
+	<classpathentry kind="lib" path="lib/hackystat-analysis-dailyprojectdata/dailyprojectdata.lib.jar" sourcepath="lib/hackystat-analysis-dailyprojectdata/hackystat-analysis-dailyprojectdata-source.zip">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/hackystat-ui-tickertape/lib/hackystat-analysis-dailyprojectdata/hackystat-analysis-dailyprojectdata-javadoc.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/hackystat-analysis-telemetry/telemetry.lib.jar" sourcepath="lib/hackystat-analysis-telemetry/hackystat-analysis-telemetry-source.zip">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/hackystat-ui-tickertape/lib/hackystat-analysis-telemetry/hackystat-analysis-telemetry-javadoc.zip!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/hackystat-sensorbase-uh/sensorbaseclient.jar" sourcepath="lib/hackystat-sensorbase-uh/hackystat-sensorbase-uh-source.zip">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/hackystat-ui-tickertape/lib/hackystat-sensorbase-uh/hackystat-sensorbase-uh-javadoc.zip!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="lib/twitter4j/twitter4j.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
